--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <activity android:name=".SplashActivity"
+        android:theme="@android:style/Theme.NoTitleBar">
+	        <intent-filter>
+	            <action android:name="android.intent.action.MAIN" />
+	            <category android:name="android.intent.category.LAUNCHER" />
+	        </intent-filter>
+    	</activity>
+        
         <activity
             android:name="com.crazymeal.mobistras.MainActivity"
             android:label="@string/app_name" >
