Debut liste parking
Passage à la vue de liste, problème d'affichage du nom du parking
La liste est encore statique, à coupler avec la liste dynamique

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.crazymeal.mobistras.ParkingListActivity"></activity>
+        
         <service android:name="com.crazymeal.mobistras.MainService"/>
     </application>
 	
