--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         
         <activity android:name="com.crazymeal.mobistras.ParkingListActivity"></activity>
-        
+        <activity android:name="com.crazymeal.database.DatabaseActivity"></activity>
         <service android:name="com.crazymeal.mobistras.MainService"/>
     </application>
 	
