Solving crash when asynctask were already executed

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,10 @@
         
         <activity android:name="com.crazymeal.mobistras.ParkingListActivity"></activity>
         <activity android:name="com.crazymeal.database.DatabaseActivity"></activity>
-        <activity android:name="com.crazymeal.alarms.AlarmProgrammerActivity"></activity>
+        <activity 
+            android:name="com.crazymeal.alarms.AlarmProgrammerActivity"
+            android:parentActivityName="com.crazymeal.mobistras.ParkingListActivity" >
+            ></activity>
         <service android:name="com.crazymeal.mobistras.MainService"/>
     </application>
 	
