--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         
         <activity 
-            android:name="com.crazymeal.alarms.AlarmProgrammerActivity"
+            android:name="com.crazymeal.alarms.DetailedParkingActivity"
             android:parentActivityName="com.crazymeal.mobistras.ParkingListActivity" >
             ></activity>
         <service android:name="com.crazymeal.mobistras.MainService"/>
