--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
     	</activity>
          -->
         <activity
-            android:name="com.crazymeal.mobistras.ParkingListActivity"
+            android:name="com.crazymeal.mobistras.activities.ParkingListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,8 +34,8 @@
         </activity>
         
         <activity 
-            android:name="com.crazymeal.detailed.DetailedParkingActivity"
-            android:parentActivityName="com.crazymeal.mobistras.ParkingListActivity" >
+            android:name="com.crazymeal.mobistras.activities.DetailedParkingActivity"
+            android:parentActivityName="com.crazymeal.mobistras.activities.ParkingListActivity" >
             ></activity>
         <service android:name="com.crazymeal.mobistras.MainService"/>
     </application>
