Refactor and rebinding service to app

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         
         <activity 
-            android:name="com.crazymeal.mobistras.activities.DetailedParkingActivity"
+            android:name="com.crazymeal.mobistras.activities.AlarmProgrammingActivity"
             android:parentActivityName="com.crazymeal.mobistras.activities.ParkingListActivity" >
             ></activity>
         <service android:name="com.crazymeal.mobistras.MainService"/>
