--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,18 +3,21 @@
     package="com.crazymeal.mobistras"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET" /> 
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!-- 
+
+        <!--
         <activity android:name=".SplashActivity"
         android:theme="@android:style/Theme.NoTitleBar">
 	        <intent-filter>
@@ -22,9 +25,9 @@
 	            <category android:name="android.intent.category.LAUNCHER" />
 	        </intent-filter>
     	</activity>
-         -->
+        -->
         <activity
-            android:name="com.crazymeal.mobistras.activities.ParkingListActivity"
+            android:name=".activities.ParkingListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,13 +35,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
-            android:name="com.crazymeal.mobistras.activities.AlarmProgrammingActivity"
-            android:parentActivityName="com.crazymeal.mobistras.activities.ParkingListActivity" >
-            ></activity>
-        <service android:name="com.crazymeal.mobistras.alarms.AlarmService"/>
-        <receiver android:name="com.crazymeal.mobistras.alarms.AlarmReceiver"></receiver>
+        <activity
+            android:name=".activities.AlarmProgrammingActivity"
+            android:parentActivityName=".activities.ParkingListActivity" >
+            >
+        </activity>
+
+        <service android:name=".alarms.AlarmService" />
+
+        <receiver android:name=".alarms.AlarmReceiver" >
+        </receiver>
+
+        <activity
+            android:name=".NotificationLandingActivity"
+            android:label="@string/title_activity_notification_landing" >
+        </activity>
     </application>
-	
+
 </manifest>
