--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,8 +47,12 @@
         </receiver>
 
         <activity
-            android:name=".NotificationLandingActivity"
-            android:label="@string/title_activity_notification_landing" >
+            android:name=".activities.NotificationLandingActivity"
+            android:parentActivityName=".activities.ParkingListActivity">
+            <meta-data
+		        android:name="android.support.PARENT_ACTIVITY"
+		        android:value=".activities.ParkingListActivity"/>
+            
         </activity>
     </application>
 
