Can now disable receiver if doesn't want to check parkings

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,9 @@
 
         <service android:name="com.crazymeal.strasandpark.alarms.AlarmService" />
 
-        <receiver android:name="com.crazymeal.strasandpark.alarms.AlarmReceiver" >
+        <receiver 
+            android:name="com.crazymeal.strasandpark.alarms.AlarmReceiver" 
+            android:enabled="true">
         </receiver>
 
     </application>
