--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -37,6 +38,10 @@
         <receiver 
             android:name="com.crazymeal.strasandpark.alarms.AlarmReceiver" 
             android:enabled="true">
+            <intent-filter>
+		        <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+		    </intent-filter>
+            
         </receiver>
 
     </application>
